update after married

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="section" id="first-page">
             <h1>T<small>&</small>N</h1>
             <h3>
-                We are getting married
+                We got married!!!
             </h3>
             <h4>December / 21st / 2015</h4>
         </div>
@@ -261,8 +261,8 @@
         <!-- Fifth page -->
         <div class="section" id="fifth-page">
             <h1>Thank <br> you</h1>
-            <h2>And don't miss it</h2>
-            <div class="countdown">
+            <h2>For your attendance</h2>
+            <!--<div class="countdown">
                 <div class="box">
                     <div class="value day">00</div>
                     <div class="title">Days</div>
@@ -279,7 +279,7 @@
                     <div class="value second">00</div>
                     <div class="title">Seconds</div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
     
